<resources>
    <string name="app_name">Co Watch</string>
    <string name="confirmed">Confirmed</string>
    <string name="death">Death</string>
    <string name="recovered">Recovered</string>
    <string name="stat_heading">World Statistics</string>
    <string name="search_country">Search Country</string>
    <string name="dev">Altaf Razzaque\n Software &amp; UI/UX Developer</string>
    <string name="list_heading">Countries Affected</string>
    <string name="network_error_message">Please check your internet connection and try again!</string>
    <string name="disclaimer">This is not an official app and the data may vary depending upon the API. For exact numbers, you should rely on a government source.</string>
    <string name="new_cases">New Cases</string>
    <string name="sort">Sort</string>
    <string name="tab_1">Overview</string>
    <string name="tab_2">India</string>
    <string name="tab_3">Districts</string>
    <string name="today_s_india_statistics">Today’s India Statistics</string>
    <string name="indian_states">Indian States</string>
    <string name="india_stats">India Stats</string>
    <string name="district_stats">District Stats</string>
    <string name="thanks_message">Thanks to the guys at covid19india.org for providing state-wise data and I\'m also thankful to all the volunteers who are trying to keep the data as accurate as possible.</string>
    <string name="thanks_title">Special Thanks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="pool_down_to_refresh">Pool down to refresh</string>
    <string name="slow_internet_string">Slow or no internet connection\nplease your internet settings</string>
    <string name="data_not_found">Data not found</string>
    <string name="tab_4">Graphics</string>
    <string name="indian_timeline">India\'s Corona Dashboard</string>

    <string name="admob_test_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="simple_testing_banner">a-app-pub-3940256099942544/6300978111</string>
    <string name="simple_testing_full_banner">ca-app-pub-3940256099942544/1033173712</string>
    <string name="full_testing_banner_video">ca-app-pub-3940256099942544/8691691433</string>

    <string name="admob_app_id">ca-app-pub-3746881113001207~8702578102</string>
    <string name="original_banner">ca-app-pub-3746881113001207/5501699694</string>
    <string name="original_full_banner">ca-app-pub-3746881113001207/8838309479</string>

</resources>
