<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:contentInsetStart="0dp"
            app:contentInsetEnd="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/india_stats"

                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_graph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:clickable="true"
                    android:layout_marginEnd="10dp"
                    style="@style/ClickableView"
                    android:visibility="gone"
                    android:layout_toLeftOf="@+id/iv_search"
                    android:src="@drawable/ic_report"
                    android:tint="@color/dark_blue"
                    android:layout_centerVertical="true"
                    android:focusable="true" />


                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:clickable="true"
                    style="@style/ClickableView"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_search_black_24dp"
                    android:tint="@color/dark_blue"
                    android:layout_centerVertical="true"
                    android:focusable="true" />



            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/textSliderViewPager"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_height="62dp"
                        android:background="@drawable/bg_outline"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/title_layout"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/worldStatistics"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/today_s_india_statistics"
                            android:layout_alignParentLeft="true"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text=""
                            android:layout_alignParentRight="true"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp"/>


                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_layout">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="80dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_confirmed">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/montserrat_bold"
                                android:text="@string/confirmed"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/confirmedCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:ellipsize="end"
                                android:fontFamily="@font/helvetica"
                                android:maxLines="1"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="@+id/textView7"
                                tools:text="1000000" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="80dp"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_recovered">

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/montserrat_bold"
                                android:text="@string/recovered"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/recoveredCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:ellipsize="end"
                                android:fontFamily="@font/helvetica"
                                android:maxLines="1"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="@+id/textView8"
                                tools:text="1000000" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="80dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_death">

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:fontFamily="@font/montserrat_bold"
                                android:text="@string/death"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/deathCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:ellipsize="end"
                                android:fontFamily="@font/helvetica"
                                android:maxLines="1"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="@+id/textView9"
                                tools:text="1000000" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>


                    <com.google.android.gms.ads.AdView
                        xmlns:ads="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/adView_banner"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        ads:adSize="BANNER"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                        ads:adUnitId="@string/original_banner"/>

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/indian_states"
                        android:textColor="@color/dark_blue"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/adView_banner" />
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:clipToPadding="false"
            tools:listitem="@layout/item_list"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>


        <!--  <com.facebook.shimmer.ShimmerFrameLayout
              android:id="@+id/shimmerLoading"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:visibility="gone">

              <include layout="@layout/shimmer_layout"/>
          </com.facebook.shimmer.ShimmerFrameLayout>-->
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>
