<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeToRefresh"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            app:layout_scrollFlags="scroll|enterAlways">
            <me.ibrahimsn.particle.ParticleView
                android:id="@+id/particleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:particleCount="20"
                android:visibility="gone"
                app:minParticleRadius="5"
                app:maxParticleRadius="12"
                app:particleColor="@color/colorAccent"
                app:backgroundColor="@color/colorPrimaryDark" />
            <RelativeLayout android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/appbar"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/hamburgerImageView"
                    style="@style/ClickableView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="23dp"
                    android:padding="5dp"
                    android:onClick="openNavBar"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_menu_black_24dp"
                    android:visibility="visible"
                    android:tint="@color/dark_blue" />

                <ImageView
                    android:id="@+id/titleLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_logo" />

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:padding="5dp"
                    style="@style/ClickableView"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_search_black_24dp"
                    android:tint="@color/dark_blue"/>

            </RelativeLayout>
        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/textSliderViewPager"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_height="62dp"
                    android:background="@drawable/bg_outline"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp">

                    <TextView
                        android:id="@+id/worldStatistics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/stat_heading"
                        android:layout_alignParentLeft="true"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text=""
                        android:layout_alignParentRight="true"
                        android:textColor="@color/dark_blue"
                        android:textSize="16sp"/>


                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/barContainer"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.broooapps.lineargraphview2.LinearGraphView
                        android:id="@+id/linear_graph_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:lgv_border_anim_duration="600"/>

                    <ImageView
                        android:id="@+id/yellowBar"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/yellow_bar" />

                    <ImageView
                        android:id="@+id/greenBar"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/green_bar" />

                    <ImageView
                        android:id="@+id/redBar"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/red_bar" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/worldStatsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/helvetica"
                            android:text="@string/confirmed"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/confirmedCount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="18dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_bold"
                            android:gravity="end"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp"
                            tools:text="278" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="end|center_vertical"
                            android:src="@drawable/yellow_bar" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/helvetica"
                            android:text="@string/recovered"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/recoveredCount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="18dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_bold"
                            android:gravity="end"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp"
                            tools:text="278" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="end|center_vertical"
                            android:src="@drawable/green_bar" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/helvetica"
                            android:text="@string/death"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/deathCount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="18dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/montserrat_bold"
                            android:gravity="end"
                            android:textColor="@color/dark_blue"
                            android:textSize="16sp"
                            tools:text="278" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="end|center_vertical"
                            android:src="@drawable/red_bar" />
                    </LinearLayout>

                </LinearLayout>

                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView_banner"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/original_banner">
                </com.google.android.gms.ads.AdView>

                <TextView
                    android:id="@+id/todaysStats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/list_heading"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/countryWiseRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:clipToPadding="false"
            tools:listitem="@layout/item_list"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>